--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 				
         		<div class="projects_inner row">
 				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item slides_theme">
         					<i class="flaticon-briefcase"></i>
         					<h4>Lecturer</h4>
 						<p><b>Engineering</b></p>
@@ -234,7 +234,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item  slides_theme">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer</h4>
 						<p><b>Computer Science & Engineering</b></p>
@@ -243,7 +243,7 @@
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item  slides_theme">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer (Adjunct)</h4>
 						<p><b>Engineering</b></p>
@@ -252,7 +252,7 @@
         				</div>
         			</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item  slides_theme">
         					<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
 						<p><b>Bangladesh University of Engineering and Technology</b></p>
@@ -264,7 +264,7 @@
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item  slides_theme">
 						<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
 						<p><b>Jahangirnagar University</b></p>
@@ -276,7 +276,7 @@
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item  slides_theme">
 						<i class="flaticon-professor"></i>
         					<h4>B.Sc. Engg.</h4>
 						<p><b>Rajshahi University of Engineering & Technology</b></p>
@@ -288,7 +288,7 @@
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item  slides_theme">
 						<i class="flaticon-school"></i>
 						<p><b>Ispahani Public School & College</b></p>
 						<p></p>
@@ -299,7 +299,7 @@
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
-        				<div class="feature_item">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-student"></i>
         					<h4>SSC</h4>
 						<p><b>Gongamondal Raj Institution</b></p>
