--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         
         <!--================Education Area =================-->
         <section class="projects_area p_80" id="Education">
-        	<div class="container">
+        	<div class="container slider_theme">
         		<div class="main_title">
         			<h2>Education & Experiences</h2>
         			<p></p>
@@ -221,93 +221,91 @@
 					<li data-filter=".experiences"><a href="#">Experiences</a></li>
 					<li data-filter=".education"><a href="#">Education</a></li>
 				</ul>
-			</div>
-			<div class="slider_theme">	
-				<div class="projects_inner row slides_theme">
-					<div class="col-lg-4 col-md-4 col-sm-6 experiences">
-						<div class="feature_item">
-							<i class="flaticon-briefcase"></i>
-							<h4>Lecturer</h4>
-							<p><b>Engineering</b></p>
-							<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
-							<p><b>Duration:</b> Mar, 2020 to Present</p>
-						</div>
+			</div>	
+			<div class="projects_inner row slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
+					<div class="feature_item">
+						<i class="flaticon-briefcase"></i>
+						<h4>Lecturer</h4>
+						<p><b>Engineering</b></p>
+						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
+						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 experiences">
-						<div class="feature_item">
-							<i class="flaticon-briefcase"></i>
-							<h4>Former Lecturer</h4>
-							<p><b>Computer Science & Engineering</b></p>
-							<p><b>Prime University</b></p>
-							<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
-						</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
+					<div class="feature_item">
+						<i class="flaticon-briefcase"></i>
+						<h4>Former Lecturer</h4>
+						<p><b>Computer Science & Engineering</b></p>
+						<p><b>Prime University</b></p>
+						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 experiences">
-						<div class="feature_item">
-							<i class="flaticon-briefcase"></i>
-							<h4>Former Lecturer (Adjunct)</h4>
-							<p><b>Engineering</b></p>
-							<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
-							<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
-						</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
+					<div class="feature_item">
+						<i class="flaticon-briefcase"></i>
+						<h4>Former Lecturer (Adjunct)</h4>
+						<p><b>Engineering</b></p>
+						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
+						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 education">
-						<div class="feature_item">
-							<i class="flaticon-professor"></i>
-							<h4>M.Sc.</h4>
-							<p><b>Bangladesh University of Engineering and Technology</b></p>
-							<p></p>
-							<p><b></b>Computer Science and Engineering</p>
-							<p><b>CGPA:</b> N/A</p>
-							<p><b>Position:</b> N/A</p>
-							<p><b>Passing Year:</b> Ongoing</p>
-						</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 education">
+					<div class="feature_item">
+						<i class="flaticon-professor"></i>
+						<h4>M.Sc.</h4>
+						<p><b>Bangladesh University of Engineering and Technology</b></p>
+						<p></p>
+						<p><b></b>Computer Science and Engineering</p>
+						<p><b>CGPA:</b> N/A</p>
+						<p><b>Position:</b> N/A</p>
+						<p><b>Passing Year:</b> Ongoing</p>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 education">
-						<div class="feature_item">
-							<i class="flaticon-professor"></i>
-							<h4>M.Sc.</h4>
-							<p><b>Jahangirnagar University</b></p>
-							<p></p>
-							<p><b></b>Computer Science</p>
-							<p><b>CGPA:</b> 3.95</p>
-							<p><b>Position:</b> 1st</p>
-							<p><b>Passing Year:</b> 2020</p>
-						</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 education">
+					<div class="feature_item">
+						<i class="flaticon-professor"></i>
+						<h4>M.Sc.</h4>
+						<p><b>Jahangirnagar University</b></p>
+						<p></p>
+						<p><b></b>Computer Science</p>
+						<p><b>CGPA:</b> 3.95</p>
+						<p><b>Position:</b> 1st</p>
+						<p><b>Passing Year:</b> 2020</p>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 education">
-						<div class="feature_item">
-							<i class="flaticon-professor"></i>
-							<h4>B.Sc. Engg.</h4>
-							<p><b>Rajshahi University of Engineering & Technology</b></p>
-							<p></p>
-							<p><b></b>Computer Science & Engineering</p>
-							<p><b>CGPA:</b> 3.79 out of 4.00</p>
-							<p><b>Position:</b> 8th out of 106</p>
-							<p><b>Passing Year:</b> 2018</p>
-						</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 education">
+					<div class="feature_item">
+						<i class="flaticon-professor"></i>
+						<h4>B.Sc. Engg.</h4>
+						<p><b>Rajshahi University of Engineering & Technology</b></p>
+						<p></p>
+						<p><b></b>Computer Science & Engineering</p>
+						<p><b>CGPA:</b> 3.79 out of 4.00</p>
+						<p><b>Position:</b> 8th out of 106</p>
+						<p><b>Passing Year:</b> 2018</p>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 education">
-						<div class="feature_item">
-							<i class="flaticon-school"></i>
-							<p><b>Ispahani Public School & College</b></p>
-							<p></p>
-							<p><b>Group:</b> Science</p>
-							<p><b>GPA:</b> 5.00 out of 5.00</p>
-							<p><b>Passing Year:</b> 2013</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 education">
+					<div class="feature_item">
+						<i class="flaticon-school"></i>
+						<p><b>Ispahani Public School & College</b></p>
+						<p></p>
+						<p><b>Group:</b> Science</p>
+						<p><b>GPA:</b> 5.00 out of 5.00</p>
+						<p><b>Passing Year:</b> 2013</p>
 
-						</div>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 education">
-						<div class="feature_item">
-							<i class="flaticon-student"></i>
-							<h4>SSC</h4>
-							<p><b>Gongamondal Raj Institution</b></p>
-							<p></p>
-							<p><b>Group:</b> Science</p>
-							<p><b>GPA:</b> 5.00 out of 5.00</p>
-							<p><b>Passing Year:</b> 2011</p>
-						</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 education">
+					<div class="feature_item">
+						<i class="flaticon-student"></i>
+						<h4>SSC</h4>
+						<p><b>Gongamondal Raj Institution</b></p>
+						<p></p>
+						<p><b>Group:</b> Science</p>
+						<p><b>GPA:</b> 5.00 out of 5.00</p>
+						<p><b>Passing Year:</b> 2011</p>
 					</div>
 				</div>
 			</div>
