--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				</ul>
 			</div>	
 			<div class="projects_inner row slides_theme">
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
+				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
 						<h4>Lecturer</h4>
@@ -232,7 +232,7 @@
 						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
+				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
 						<h4>Former Lecturer</h4>
@@ -241,7 +241,7 @@
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
+				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
 						<h4>Former Lecturer (Adjunct)</h4>
@@ -250,7 +250,7 @@
 						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
+				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
 						<h4>M.Sc.</h4>
@@ -262,7 +262,7 @@
 						<p><b>Passing Year:</b> Ongoing</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
+				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
 						<h4>M.Sc.</h4>
@@ -274,7 +274,7 @@
 						<p><b>Passing Year:</b> 2020</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
+				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
 						<h4>B.Sc. Engg.</h4>
@@ -286,7 +286,7 @@
 						<p><b>Passing Year:</b> 2018</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
+				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-school"></i>
 						<p><b>Ispahani Public School & College</b></p>
@@ -297,7 +297,7 @@
 
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
+				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-student"></i>
 						<h4>SSC</h4>
