--- a/index.html
+++ b/index.html
@@ -844,17 +844,20 @@
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script>
-		$(document).ready(function(){
-		    if(window.innerWidth < 576){
-			$('.slides_theme').removeClass('row');
-		    }
-		});
-		$(window).resize(function(){
-		    if(window.innerWidth < 576){
-			$('.slides_theme').removeClass('row');
-		    }else{
-			$('.slides_theme').addClass('row');
-		    }
+		jQuery(document).ready(function($) {
+		  var alterClass = function() {
+		    var ww = document.body.clientWidth;
+		    if (ww < 575) {
+		      $('.slides_theme').removeClass('row');
+		    } else if (ww >= 576) {
+		      $('.slides_theme').addClass('row');
+		    };
+		  };
+		  $(window).resize(function(){
+		    alterClass();
+		  });
+		  //Fire it when the page first loads:
+		  alterClass();
 		});
 			
 		function calculateExp(date) 
