--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 				</div>
 					
 				<div class="projects_inner row  slider_theme">
-					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
+					<div class="col-lg-3 col-md-4 research graduate_thesis">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
 							<div class="projects_text">
@@ -343,7 +343,7 @@
 						</div>
 					</div>
 					
-					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
+					<div class="col-lg-3 col-md-4 projects other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
 							<div class="projects_text">
@@ -352,7 +352,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
+					<div class="col-lg-3 col-md-4 projects other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
@@ -361,7 +361,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
+					<div class="col-lg-3 col-md-4 projects other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
 							<div class="projects_text">
@@ -370,7 +370,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
+					<div class="col-lg-3 col-md-4 other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
 							<div class="projects_text">
@@ -379,7 +379,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 thesis research publications">
+					<div class="col-lg-3 col-md-4 thesis research publications">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
 							<div class="projects_text">
@@ -388,7 +388,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 publications research">
+					<div class="col-lg-3 col-md-4 publications research">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-6.jpg" alt="">
 							<div class="projects_text">
@@ -397,7 +397,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
+					<div class="col-lg-3 col-md-4 other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
 							<div class="projects_text">
@@ -406,7 +406,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
+					<div class="col-lg-3 col-md-4 other_Projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-8.jpg" alt="">
 							<div class="projects_text">
@@ -415,7 +415,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
+					<div class="col-lg-3 col-md-4 other_Projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
 							<div class="projects_text">
@@ -438,7 +438,7 @@
         			<p>I taught or currently teach the following courses.</p>
         		</div>
         		<div class="row latest_blog_inner  slider_theme">
-        			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
+        			<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-1.jpg" alt="">
@@ -451,7 +451,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
+        			<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-2.jpg" alt="">
@@ -464,7 +464,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
+        			<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-3.jpg" alt="">
@@ -477,7 +477,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-4.jpg" alt="">
@@ -490,7 +490,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-5.jpg" alt="">
@@ -503,7 +503,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-6.jpg" alt="">
@@ -516,7 +516,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-7.jpg" alt="">
@@ -529,7 +529,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course-8.jpg" alt="">
@@ -542,7 +542,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -555,7 +555,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -568,7 +568,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -581,7 +581,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -594,7 +594,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -607,7 +607,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -620,7 +620,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
@@ -646,7 +646,7 @@
         			<p>Following peoples are working with me.</p>
         		</div>
         		<div class="row latest_blog_inner  slider_theme" style="text-align: center;">
-        			<div class="col-lg-4 col-md-4 col-sm-4">
+        			<div class="col-lg-4 col-md-4">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/team/team-1.jpg" alt="">
@@ -659,7 +659,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-4">
+        			<div class="col-lg-4 col-md-4">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/team/team-2.jpg" alt="">
@@ -672,7 +672,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-4">
+        			<div class="col-lg-4 col-md-4">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/team/team-3.jpg" alt="">
@@ -698,7 +698,7 @@
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
         		<div class="row latest_blog_inner  slider_theme" style="text-align: center;">
-        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+        			<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
@@ -710,7 +710,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+        			<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
@@ -722,7 +722,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+        			<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
@@ -734,7 +734,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
@@ -746,7 +746,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
@@ -758,7 +758,7 @@
         					</div>
         				</div>
         			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+					<div class="col-lg-2 col-md-3">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
