--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         
         <!--================Education Area =================-->
         <section class="projects_area p_80" id="Education">
-        	<div class="container slider_theme">
+        	<div class="container">
         		<div class="main_title">
         			<h2>Education & Experiences</h2>
         			<p></p>
@@ -222,7 +222,7 @@
 					<li data-filter=".education"><a href="#">Education</a></li>
 				</ul>
 			</div>	
-			<div class="projects_inner row slides_theme">
+			<div class="projects_inner row">
 				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
@@ -432,12 +432,12 @@
         
         <!--================Latest Courses Teach Area =================-->
         <section class="latest_blog_area p_80">
-        	<div class="container">
+        	<div class="container slider_theme">
         		<div class="main_title">
         			<h2>Teaching Areas</h2>
         			<p>I taught or currently teach the following courses.</p>
         		</div>
-        		<div class="row latest_blog_inner">
+        		<div class="row latest_blog_inner slides_theme">
         			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
@@ -640,12 +640,12 @@
 		
 		<!--================Latest My Team Area =================-->
         <section class="latest_blog_area p_80">
-        	<div class="container">
+        	<div class="container slider_theme">
         		<div class="main_title">
         			<h2>My Team</h2>
         			<p>Following peoples are working with me.</p>
         		</div>
-        		<div class="row latest_blog_inner" style="text-align: center;">
+        		<div class="row latest_blog_inner slides_theme" style="text-align: center;">
         			<div class="col-lg-4 col-md-4 col-sm-4">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
@@ -692,12 +692,12 @@
 		
 		<!--================Latest Courses Teach Area =================-->
         <section class="latest_blog_area p_80">
-        	<div class="container">
+        	<div class="container slider_theme">
         		<div class="main_title">
         			<h2>Certificates</h2>
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
-        		<div class="row latest_blog_inner" style="text-align: center;">
+        		<div class="row latest_blog_inner slider_theme" style="text-align: center;">
         			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
