--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
         			<h2>Certificates</h2>
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
-        		<div class="row latest_blog_inner slider_theme" style="text-align: center;">
+        		<div class="row latest_blog_inner slides_theme" style="text-align: center;">
         			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
