--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         
         <!--================Latest Courses Teach Area =================-->
         <section class="latest_blog_area p_80">
-        	<div class="container slider_theme">
+        	<div class="container">
         		<div class="main_title">
         			<h2>Teaching Areas</h2>
         			<p>I taught or currently teach the following courses.</p>
@@ -640,7 +640,7 @@
 		
 		<!--================Latest My Team Area =================-->
         <section class="latest_blog_area p_80">
-        	<div class="container slider_theme">
+        	<div class="container">
         		<div class="main_title">
         			<h2>My Team</h2>
         			<p>Following peoples are working with me.</p>
@@ -692,7 +692,7 @@
 		
 		<!--================Latest Courses Teach Area =================-->
         <section class="latest_blog_area p_80">
-        	<div class="container slider_theme">
+        	<div class="container">
         		<div class="main_title">
         			<h2>Certificates</h2>
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
