--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         			<h2>Teaching Areas</h2>
         			<p>I taught or currently teach the following courses.</p>
         		</div>
-        		<div class="row latest_blog_inner slides_theme">
+        		<div class="row latest_blog_inner">
         			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
@@ -645,7 +645,7 @@
         			<h2>My Team</h2>
         			<p>Following peoples are working with me.</p>
         		</div>
-        		<div class="row latest_blog_inner slides_theme" style="text-align: center;">
+        		<div class="row latest_blog_inner" style="text-align: center;">
         			<div class="col-lg-4 col-md-4 col-sm-4">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
@@ -697,7 +697,7 @@
         			<h2>Certificates</h2>
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
-        		<div class="row latest_blog_inner slides_theme" style="text-align: center;">
+        		<div class="row latest_blog_inner" style="text-align: center;">
         			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
