--- a/index.html
+++ b/index.html
@@ -230,20 +230,20 @@
 						<p><b>Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Mar, 2020 to Present</p>
-					</div>
+					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
-						<i class="flaticon-briefcase"></i>
+						<i class="flaticon-briefcase"></i-->
 						<h4>Former Lecturer</h4>
 						<p><b>Computer Science & Engineering</b></p>
 						<p><b>Prime University</b></p>
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
-					</div>
+					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
-						<i class="flaticon-briefcase"></i>
+						<i class="flaticon-briefcase"></i-->
 						<h4>Former Lecturer (Adjunct)</h4>
 						<p><b>Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
@@ -260,11 +260,11 @@
 						<p><b>CGPA:</b> N/A</p>
 						<p><b>Position:</b> N/A</p>
 						<p><b>Passing Year:</b> Ongoing</p>
-					</div>
+					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
-						<i class="flaticon-professor"></i>
+						<i class="flaticon-professor"></i-->
 						<h4>M.Sc.</h4>
 						<p><b>Jahangirnagar University</b></p>
 						<p></p>
@@ -272,11 +272,11 @@
 						<p><b>CGPA:</b> 3.95</p>
 						<p><b>Position:</b> 1st</p>
 						<p><b>Passing Year:</b> 2020</p>
-					</div>
+					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
-						<i class="flaticon-professor"></i>
+						<i class="flaticon-professor"></i-->
 						<h4>B.Sc. Engg.</h4>
 						<p><b>Rajshahi University of Engineering & Technology</b></p>
 						<p></p>
@@ -284,22 +284,23 @@
 						<p><b>CGPA:</b> 3.79 out of 4.00</p>
 						<p><b>Position:</b> 8th out of 106</p>
 						<p><b>Passing Year:</b> 2018</p>
-					</div>
+					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
-						<i class="flaticon-school"></i>
+						<i class="flaticon-school"></i-->
+						<h4>HSC</h4>
 						<p><b>Ispahani Public School & College</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
 						<p><b>GPA:</b> 5.00 out of 5.00</p>
 						<p><b>Passing Year:</b> 2013</p>
 
-					</div>
+					<!--/div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
-						<i class="flaticon-student"></i>
+						<i class="flaticon-student"></i-->
 						<h4>SSC</h4>
 						<p><b>Gongamondal Raj Institution</b></p>
 						<p></p>
