--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 				</ul>
 			</div>	
 			<div class="projects_inner row">
-				<div class="col-lg-4 col-md-4 experiences">
+				<div class="col-lg-6 col-md-6 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
-						<h4>Lecturer</h4>
-						<p><b>Engineering</b></p>
+						<!--h4>Lecturer</h4-->
+						<p><b>Lecturer, Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					<!--/div>
@@ -235,8 +235,8 @@
 				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i-->
-						<h4>Former Lecturer</h4>
-						<p><b>Computer Science & Engineering</b></p>
+						<!--h4>Former Lecturer</h4-->
+						<p><b>Former Lecturer, Department of Computer Science & Engineering</b></p>
 						<p><b>Prime University</b></p>
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
 					<!--/div>
@@ -244,17 +244,17 @@
 				<div class="col-lg-4 col-md-4 experiences">
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i-->
-						<h4>Former Lecturer (Adjunct)</h4>
-						<p><b>Engineering</b></p>
+						<!--h4>Former Lecturer (Adjunct)</h4-->
+						<p><b>Former Lecturer (Adjunct), Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 education">
+				<div class="col-lg-6 col-md-6 education">
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
-						<h4>M.Sc.</h4>
-						<p><b>Bangladesh University of Engineering and Technology</b></p>
+						<!--h4>M.Sc.</h4-->
+						<p><b>M.Sc., Bangladesh University of Engineering and Technology</b></p>
 						<p></p>
 						<p><b></b>Computer Science and Engineering</p>
 						<p><b>CGPA:</b> N/A</p>
@@ -265,8 +265,8 @@
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-professor"></i-->
-						<h4>M.Sc.</h4>
-						<p><b>Jahangirnagar University</b></p>
+						<!--h4>M.Sc.</h4-->
+						<p><b>M.Sc., Jahangirnagar University</b></p>
 						<p></p>
 						<p><b></b>Computer Science</p>
 						<p><b>CGPA:</b> 3.95</p>
@@ -277,8 +277,8 @@
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-professor"></i-->
-						<h4>B.Sc. Engg.</h4>
-						<p><b>Rajshahi University of Engineering & Technology</b></p>
+						<!--h4>B.Sc. Engg.</h4-->
+						<p><b>B.Sc. Engg., Rajshahi University of Engineering & Technology</b></p>
 						<p></p>
 						<p><b></b>Computer Science & Engineering</p>
 						<p><b>CGPA:</b> 3.79 out of 4.00</p>
@@ -289,8 +289,8 @@
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-school"></i-->
-						<h4>HSC</h4>
-						<p><b>Ispahani Public School & College</b></p>
+						<!--h4>HSC</h4-->
+						<p><b>HSC, Ispahani Public School & College</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
 						<p><b>GPA:</b> 5.00 out of 5.00</p>
@@ -301,8 +301,8 @@
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-student"></i-->
-						<h4>SSC</h4>
-						<p><b>Gongamondal Raj Institution</b></p>
+						<!--h4>SSC</h4-->
+						<p><b>SSC, Gongamondal Raj Institution</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
 						<p><b>GPA:</b> 5.00 out of 5.00</p>
