--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<li></li>
         								<li data-filter=".graduate_thesis">
 										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; padding: 0px;">
-											Graduate Thesis
+											Graduate</br>Thesis
 										</a>
 									</li>
         							</ul>
@@ -122,7 +122,7 @@
 									<li></li>
         								<li data-filter=".thesis">
 										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;  padding: 0px;">
-											Undergrad Thesis
+											Undergrad</br>Thesis
 										</a>
 									</li>
         							</ul>
@@ -134,7 +134,7 @@
 									<li></li>
         								<li data-filter=".projects">
 										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;  padding: 0px;">
-											Undergrad Projects
+											Undergrad</br>Projects
 										</a>
 									</li>
         							</ul>
@@ -146,7 +146,7 @@
 									<li></li>
         								<li data-filter=".publications">
 										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;  padding: 0px;">
-											Total Publications
+											Total</br>Publications
 										</a>
 									</li>
         							</ul>
