--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i-->
 						<!--h4>Former Lecturer</h4-->
-						<p><b>Former Lecturer, Department of Computer Science & Engineering</b></p>
+						<p><b></br>Former Lecturer, Department of Computer Science & Engineering</b></p>
 						<p><b>Prime University</b></p>
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
 					<!--/div>
@@ -245,7 +245,7 @@
 					<div class="feature_item">
 						<i class="flaticon-briefcase"></i-->
 						<!--h4>Former Lecturer (Adjunct)</h4-->
-						<p><b>Former Lecturer (Adjunct), Department of Engineering</b></p>
+						<p><b></br>Former Lecturer (Adjunct), Department of Engineering</b></p>
 						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
 					</div>
@@ -254,7 +254,7 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i>
 						<!--h4>M.Sc.</h4-->
-						<p><b>M.Sc., Bangladesh University of Engineering and Technology</b></p>
+						<p><b></br>M.Sc., Bangladesh University of Engineering and Technology</b></p>
 						<p></p>
 						<p><b></b>Computer Science and Engineering</p>
 						<p><b>CGPA:</b> N/A</p>
@@ -266,7 +266,7 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i-->
 						<!--h4>M.Sc.</h4-->
-						<p><b>M.Sc., Jahangirnagar University</b></p>
+						<p><b></br>M.Sc., Jahangirnagar University</b></p>
 						<p></p>
 						<p><b></b>Computer Science</p>
 						<p><b>CGPA:</b> 3.95</p>
@@ -278,19 +278,19 @@
 					<div class="feature_item">
 						<i class="flaticon-professor"></i-->
 						<!--h4>B.Sc. Engg.</h4-->
-						<p><b>B.Sc. Engg., Rajshahi University of Engineering & Technology</b></p>
+						<p><b></br>B.Sc. Engg., Rajshahi University of Engineering & Technology</b></p>
 						<p></p>
 						<p><b></b>Computer Science & Engineering</p>
 						<p><b>CGPA:</b> 3.79 out of 4.00</p>
 						<p><b>Position:</b> 8th out of 106</p>
 						<p><b>Passing Year:</b> 2018</p>
-					<!--/div>
+					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 education">
+				<!--div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-school"></i-->
 						<!--h4>HSC</h4-->
-						<p><b>HSC, Ispahani Public School & College</b></p>
+						<p><b></br>HSC, Ispahani Public School & College</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
 						<p><b>GPA:</b> 5.00 out of 5.00</p>
@@ -302,13 +302,13 @@
 					<div class="feature_item">
 						<i class="flaticon-student"></i-->
 						<!--h4>SSC</h4-->
-						<p><b>SSC, Gongamondal Raj Institution</b></p>
+						<p><b></br>SSC, Gongamondal Raj Institution</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
 						<p><b>GPA:</b> 5.00 out of 5.00</p>
 						<p><b>Passing Year:</b> 2011</p>
 					</div>
-				</div>
+				</div-->
 			</div>
         	</div>
         </section>
