--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 				</div>
 				<!--div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
-						<i class="flaticon-school"></i-->
+						<i class="flaticon-school"></i>
 						<!--h4>HSC</h4-->
 						<p><b></br>HSC, Ispahani Public School & College</b></p>
 						<p></p>
@@ -296,11 +296,11 @@
 						<p><b>GPA:</b> 5.00 out of 5.00</p>
 						<p><b>Passing Year:</b> 2013</p>
 
-					<!--/div>
+					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
-						<i class="flaticon-student"></i-->
+						<i class="flaticon-student"></i>
 						<!--h4>SSC</h4-->
 						<p><b></br>SSC, Gongamondal Raj Institution</b></p>
 						<p></p>
