--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <title>Md. Jahidul Islam</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="vendors/linericon/style.css">
+        <!--link rel="stylesheet" href="vendors/linericon/style.css"-->
         <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-        <link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
-        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
-        <link rel="stylesheet" href="vendors/animate-css/animate.css">
+        <!--link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css"-->
+        <!--link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
+        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css"-->
+        <!--link rel="stylesheet" href="vendors/animate-css/animate.css"-->
         <link rel="stylesheet" href="vendors/flaticon/flaticon.css">
         <!-- main css -->
         <link rel="stylesheet" href="css/style_updated.css">
@@ -297,8 +297,8 @@
 						<p><b>Passing Year:</b> 2013</p>
 
 					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 education">
+				</div-->
+				<!--div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-student"></i>
 						<!--h4>SSC</h4-->
